@@ -10,32 +10,32 @@ import com.Alcura.Doctor.Service.Interfaces.DoctorAuthService;
 import jakarta.servlet.http.HttpSession;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.List;
 
 @Service
-public class DoctorAuthServiceImpl implements DoctorAuthService
-{
-    private final DoctorRepository doctorRepository ;
+public class DoctorAuthServiceImpl implements DoctorAuthService {
+    private final DoctorRepository doctorRepository;
     private final hashPassword hashPassword;
     private final OtpService otpService;
     private final EmailService emailService;
     private final DoctorUniqueId doctorUniqueId;
     private static final Logger logger = LoggerFactory.getLogger(DoctorAuthServiceImpl.class);
 
+    // Default image path in resources
+    private static final String DEFAULT_PROFILE_IMAGE_PATH = "static/Customer/image/profile/image.jpeg";
+
     public DoctorAuthServiceImpl(DoctorRepository doctorRepository,
                                  OtpService otpService,
                                  EmailService emailService,
                                  hashPassword hashPassword,
-                                 DoctorUniqueId doctorUniqueId)
-    {
+                                 DoctorUniqueId doctorUniqueId) {
         this.doctorRepository = doctorRepository;
         this.otpService = otpService;
         this.emailService = emailService;
@@ -43,14 +43,11 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
         this.doctorUniqueId = doctorUniqueId;
     }
 
-
     @Override
     public void updatePassword(String email, String newPassword) {
-        try
-        {
+        try {
             Doctor doctor = doctorRepository.findByemail(email);
-            if(doctor == null)
-            {
+            if (doctor == null) {
                 logger.error("Doctor email is empty");
                 throw new RuntimeException("Doctor not found with email " + email);
             }
@@ -58,12 +55,10 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
             String hashPsw = hashPassword.hashPassword(newPassword);
             doctor.setPassword(hashPsw);
             doctorRepository.save(doctor);
-            logger.info("Admin Password Updated : {}" , hashPsw);
-        }
-        catch (Exception e)
-        {
+            logger.info("Admin Password Updated : {}", hashPsw);
+        } catch (Exception e) {
             logger.error("Failed to update password for {}", email, e);
-            throw  new RuntimeException("Password Update Failed " + e.getMessage());
+            throw new RuntimeException("Password Update Failed " + e.getMessage());
         }
     }
 
@@ -74,12 +69,10 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
 
     @Override
     public ResponseEntity<String> registerDoctor(DoctorRegisterRequest request, HttpSession session) {
-        try
-        {
+        try {
             Doctor existingDoctor = doctorRepository.findByEmailAndStatus(request.getEmail().toLowerCase().trim(), 1);
 
-            if (existingDoctor != null)
-            {
+            if (existingDoctor != null) {
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Email is already Registered");
             }
 
@@ -92,33 +85,36 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
             doctor.setNic(request.getNIC());
             doctor.setFaceData(request.getFaceData());
             doctor.setDoctorType("Doctor");
+            doctor.isFirstLogin(false);
             doctor.setStatus(0);
-            doctor.setImage("/Customer/image/profile/image.jpeg");
 
+            // Set default image from resources
+            byte[] defaultImage = loadDefaultProfileImage();
+            if (defaultImage != null) {
+                doctor.setImage(defaultImage);
+            } else {
+                logger.warn("Default profile image not found, setting image to null");
+                doctor.setImage(null);
+            }
 
             doctor = doctorUniqueId.createDoctor(doctor);
             String otp = otpService.generateOtp();
             otpService.storeOtp(session, doctor.getEmail(), otp);
 
-            try
-            {
+            try {
                 emailService.sendVerificationEmail(doctor.getEmail(), otp);
-                logger.info("OTP send successfully to {}", doctor.getEmail());
+                logger.info("OTP sent successfully to {}", doctor.getEmail());
 
                 return ResponseEntity.status(HttpStatus.CREATED).body(
                         "Registration Successful! Please verify your email"
                 );
-            }
-            catch (Exception e)
-            {
-                logger.error("Error when sending OTP {}", e);
+            } catch (Exception e) {
+                logger.error("Error when sending OTP", e);
                 return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(
                         "Registration Successful but failed to send OTP. Please contact support"
                 );
             }
-        }
-        catch (Exception e)
-        {
+        } catch (Exception e) {
             logger.error("Registration failed", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(
                     "Registration failed due to server error. Please try again"
@@ -129,18 +125,15 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
     @Override
     public ResponseEntity<String> verifyOtp(String otp, HttpSession session) {
         String email = (String) session.getAttribute("verificationEmail");
-        if (email == null)
-        {
-            logger.error("email is null {}", email);
+        if (email == null) {
+            logger.error("email is null");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body("OTP session Expired or Invalid");
         }
 
-        if (otpService.validateOtp(session,email,otp))
-        {
+        if (otpService.validateOtp(session, email, otp)) {
             Doctor doctor = doctorRepository.findByemail(email);
-            if (doctor != null)
-            {
+            if (doctor != null) {
                 doctor.setStatus(1);
                 doctorRepository.save(doctor);
                 session.removeAttribute("verificationOtp");
@@ -153,8 +146,24 @@ public class DoctorAuthServiceImpl implements DoctorAuthService
                 .body("Invalid OTP");
     }
 
-    public byte[] getDefaultImageBytes() throws IOException {
-        Path imagePath = Paths.get("src/main/image.jpeg");
-        return Files.readAllBytes(imagePath);
+    /**
+     * Loads the default profile image from resources
+     * @return byte array of the image or null if not found
+     */
+    private byte[] loadDefaultProfileImage() {
+        try {
+            ClassPathResource resource = new ClassPathResource(DEFAULT_PROFILE_IMAGE_PATH);
+            if (resource.exists()) {
+                try (InputStream inputStream = resource.getInputStream()) {
+                    return inputStream.readAllBytes();
+                }
+            } else {
+                logger.error("Default profile image not found at: {}", DEFAULT_PROFILE_IMAGE_PATH);
+                return null;
+            }
+        } catch (IOException e) {
+            logger.error("Error loading default profile image", e);
+            return null;
+        }
     }
 }
